# react-native-devtools-frontend

./: .eslintignore  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  serve-dev.py  serve-local.py  setup.sh
.github/: pull_request_template.md
.github/actions/download-artifact/: action.yml
.github/actions/upload-artifact/: action.yml
.github/workflows/: build.yml  lint.yml  netlify.yml
config/gni/: devtools_grd_files.gni  devtools_image_files.gni
docs/: l10n.md
front_end/: BUILD.gn  entrypoint_template.html  index.html
front_end/core/common/: ResourceType.ts  SettingRegistration.ts
front_end/core/host/: InspectorFrontendHost.ts  InspectorFrontendHostAPI.ts  RNPerfMetrics.ts  UserMetrics.ts
front_end/core/protocol_client/: InspectorBackend.ts
front_end/core/react_native/: RNReliabilityMetrics.ts
front_end/core/rn_experiments/: BUILD.gn  experimentsImpl.ts
front_end/core/root/: Runtime.ts
front_end/core/sdk/: BUILD.gn  Connections.ts  DebuggerModel.ts  HeapProfilerModel.ts  IOModel.ts  PageResourceLoader.ts  ReactNativeApplicationModel.ts  RehydratingConnection.ts  sdk-meta.ts  sdk.ts
front_end/embedder-static/: BUILD.gn  embedderScript.js
front_end/entrypoints/heap_snapshot_worker/: HeapSnapshotLoader.ts
front_end/entrypoints/inspector_main/: BUILD.gn  InspectorMain.ts  inspector_main-meta.ts
front_end/entrypoints/main/: BUILD.gn  MainImpl.ts  main-meta.ts
front_end/entrypoints/rn_fusebox/: BUILD.gn  FuseboxAppMetadataObserver.ts  FuseboxExperimentsObserver.ts  FuseboxFeatureObserver.ts  FuseboxProfilingBuildObserver.ts  FuseboxReconnectDeviceButton.ts  FuseboxWindowTitleManager.ts  rn_fusebox.ts
front_end/entrypoints/rn_inspector/: BUILD.gn  rn_inspector.ts
front_end/entrypoints/rn_inspector/rn_perf_metrics/: BUILD.gn  Impl.ts  RNPerfMetricsEvent.d.ts  Utils.ts  rn_perf_metrics.ts
front_end/entrypoints/shell/: BUILD.gn  shell.ts
front_end/global_typings/: global_defs.d.ts  react_native.d.ts
front_end/models/persistence/: BUILD.gn  PersistenceActions.ts
front_end/models/react_native/: ReactDevToolsBindingsModel.ts
front_end/models/timeline_model/: TimelineModelFilter.test.ts
front_end/models/trace/: EntriesFilter.test.ts  TracingManager.ts
front_end/panels/console/: ConsolePrompt.ts  ConsoleView.ts  ConsoleViewMessage.test.ts  ConsoleViewMessage.ts  ErrorStackParser.test.ts  ErrorStackParser.ts  console-meta.ts  consoleView.css
front_end/panels/developer_resources/: DeveloperResourcesListView.ts
front_end/panels/explain/: explain-meta.ts
front_end/panels/livemate/: BUILD.gn  LivemateModel.ts  LivematePanel.ts  LivemateSpec.ts  livemate-meta.ts  livemate.ts  livematePanel.css
front_end/panels/network/: NetworkDataGridNode.test.ts  NetworkDataGridNode.ts  NetworkItemView.ts  NetworkLogView.ts  NetworkPanel.test.ts  NetworkPanel.ts  network-meta.ts
front_end/panels/profiler/: HeapProfileView.ts  HeapProfilerPanel.ts  HeapSnapshotGridNodes.ts  HeapSnapshotView.ts  ProfilesPanel.ts  profiler-meta.ts
front_end/panels/protocol_monitor/: ProtocolMonitor.test.ts  ProtocolMonitor.ts
front_end/panels/react_devtools/: BUILD.gn  ReactDevToolsComponentsView.ts  ReactDevToolsModel.ts  ReactDevToolsProfilerView.ts  ReactDevToolsView.ts  ReactDevToolsViewBase.ts  react_devtools.ts  react_devtools_components-meta.ts  react_devtools_profiler-meta.ts
front_end/panels/recorder/: BUILD.gn
front_end/panels/rn_welcome/: BUILD.gn  RNWelcome.ts  rnWelcome.css  rn_welcome-legacy-meta.ts  (+1 more)
front_end/testing/: EnvironmentHelpers.ts
(+90 files in other folders)
