# Copyright (c) Meta Platforms, Inc. and affiliates.
# Copyright 2024 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../../scripts/build/ninja/devtools_module.gni")
import("../../../scripts/build/ninja/generate_css.gni")
import("../visibility.gni")

generate_css("css_files") {
  sources = [ "livematePanel.css" ]
}

devtools_module("livemate") {
  sources = [ "LivematePanel.ts" ]

  deps = [
    "../../ui/legacy:bundle",
    "../react_devtools:bundle",
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "livemate.ts"

  deps = [
    ":css_files",
    "../react_devtools:bundle",
    ":livemate",
  ]

  visibility = [
    ":*",
    "../../entrypoints/*",
  ]

  visibility += devtools_panels_visibility
}

devtools_entrypoint("meta") {
  entrypoint = "livemate-meta.ts"

  deps = [
    ":bundle",

    "../../core/i18n:bundle",
    "../../ui/legacy:bundle",
  ]

  visibility = [ "../../entrypoints/*" ]
}
