# Copyright (c) Meta Platforms, Inc. and affiliates.
# Copyright 2021 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../../scripts/build/ninja/devtools_module.gni")
import("../../visibility.gni")

devtools_module("rn_perf_metrics") {
  sources = [
    "Impl.ts",
    "RNPerfMetricsEvent.d.ts",
    "rn_perf_metrics.ts",
    "Utils.ts",
  ]

  visibility = [ "../:*" ]

  visibility += devtools_entrypoints_visibility
}
